force-app/main/default/objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <description>To manage third-party service providers for the event. Stores information about vendors and tracks their contracts and services (such as catering, AV equipment), ensuring smooth coordination with service providers.</description>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>