force-app/main/default/objects/Vendor__c/fields/Agreement_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Expiration_Date__c</fullName>
    <label>Agreement Expiration Date</label>
    <type>Date</type>
</CustomField>