force-app/main/default/objects/Vendor__c/fields/Notify_before_expiry__c.field-meta.xml
<CustomField>
    <fullName>Notify_before_expiry__c</fullName>
    <formula>Agreement_Expiration_Date__c - TODAY() &lt;= 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notify before expiry</label>
    <type>Checkbox</type>
</CustomField>