force-app/main/default/objects/Vendor__c/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <label>Services Offered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>