force-app/main/default/objects/Vendor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Category__c</columns>
    <columns>Contact_Person_Name__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Agreement_Signed__c</columns>
    <columns>Services_Offered__c</columns>
    <columns>Agreement_Date__c</columns>
    <columns>Agreement_Expiration_Date__c</columns>
    <columns>Payment_Terms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>